2005-01-05  Sergii Stoian <stoian255@ukr.net>

	* Instance/Shared/bundle.make (shared-instance-bundle-all): Fixed
	copying resource files and localized resource files into the
	bundle when they are in subdirs.
	
2004-12-27  Quentin Mathe <qmathe@club-internet.fr>
       
        * Documentation/README.Darwin: Rewritten the base library install
        instructions (libxslt support with Fink explained) and other minor
        updates.
        * Documentation/machines.texi: Made the GNUstep on MacOSX section a bit
        more clear.
        * GNUstep-HOWTO: Synchronized with Documentation/machines.texi and made
        the spacing more consistent.

2004-12-26  Quentin Mathe <qmathe@club-internet.fr>
       
        * Documentation/README.Darwin: Updated to take in account the latest 
        feedback by Uli Kusterer.
        * Documentation/machines.texi: 
        * GNUstep-HOWTO:
        Updated the current GCC state for GNUstep on Darwin.

2004-12-26  Quentin Mathe <qmathe@club-internet.fr>
       
        * Documentation/README.Darwin: Improved indentation and presentation.

2004-12-19 Richard Frith-Macdonald <rfm@gnu.org>

        * target.make: For gnu compiler on darwin, use flat namespace and
	undefined warning for executables as well as libraries/bundles so
	that we can link with libraries/bundles without havint to explictly
	name all the libraries that thay depend upon.

2004-12-06  Adam Fedor  <fedor@gnu.org>

	* Documentation/machines.texi (MacOSX): Update (info from Markus
	Hitter).

	* Documentation/README.Darwin: Clean up, simplify.

Sun Nov  7 04:18:39 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* tar-exclude-list: Use *.svn instead of .svn to have
	.svn dirs excluded.

Sun Nov  7 04:07:50 2004  David Wetzel <dave@turbocat.de>

	* Instance/Shared/bundle.make: Everywhere use the '-f' flag to 'cp
	-r' so that read-only files such as subversions dirs can be
	written and overwritten.

Thu Nov  4 08:39:29 2004  Nicola Pero <n.pero@mi.flashnet.it>
